# wwweb

./: Cargo.toml  Trunk.toml  index.html
draft/qa_component/: playground.html
draft/qa_component/css/: playground.css
src/: ask_prompt_component.rs  c1.rs  chat.rs  com.rs  main.rs
