[package]
name = "wwweb"
version = "0.1.0"
edition = "2021"

[dependencies]
# this is the development version of Yew

log = "0.4.6"
wasm-logger = "0.2.0"

reqwest = { version = "0.11", features = ["json"] } # for backend API call
wasm-bindgen-futures = "0.4.34" # for backend API call
serde = { version = "1.0.159", features = ["derive"] } # for backend API call model deserialization
chrono = { version = "0.4.23", features = ["serde"] } # for backend API call model deserialization and operations with dates
yew-router = "0.18.0"
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2.100"
gloo = "0.11.0"
gloo-net = "0.6.0"
component = "0.1.1"
web-sys = "0.3.77"
gloo-storage = "0.3.0"
anyhow = "1.0.99"
async-std = "1.13.2"
